# todoApp

./: README.md  docker-compose.yaml
deployment/depl_aws/: .gitignore  docker-compose.yaml  my_aws_depl.tf
deployment/depl_db/: postgresql.conf
deployment/depl_server/: Dockerfile
deployment/depl_ui/: Dockerfile
server/: .env  .gitignore  Cargo.toml
server/migrations/2023-03-30-185729_create_notes/: down.sql  up.sql
server/src/: db.rs  error_handler.rs  main.rs  schema.rs
server/src/notes/: mod.rs  model.rs  routes.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx  reportWebVitals.tsx
